{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 26,
  "lineage": "56e4d836-47bf-5630-80a4-cbacf0b41471",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5b07b31937d4275",
            "arn": "arn:aws:ec2:eu-west-1:330428859659:instance/i-0c32eb4f44a83f004",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c32eb4f44a83f004",
            "instance_state": "running",
            "instance_type": "t3.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "kpNGINX-3969501604",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac17fa668e43af9c",
            "private_dns": "ip-10-0-2-128.eu-west-1.compute.internal",
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-54-194-9-34.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.9.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 240,
                "throughput": 0,
                "volume_id": "vol-0906bd89d24b89415",
                "volume_size": 80,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00400244c0983e1cb",
            "tags": {
              "Name": "controller",
              "Nginx": "nginx experience 3969501604"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0774527040e9520b7"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:internet-gateway/igw-09f4d865505ffbbf5",
            "id": "igw-09f4d865505ffbbf5",
            "owner_id": "330428859659",
            "tags": {
              "Name": "VPC IGW",
              "Nginx": "nginx experience 3969501604"
            },
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:route-table/rtb-05d74e7f9d3e48a4f",
            "id": "rtb-05d74e7f9d3e48a4f",
            "owner_id": "330428859659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f4d865505ffbbf5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT",
              "Nginx": "nginx experience 3969501604"
            },
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed65cba4eb72ed1",
            "route_table_id": "rtb-05d74e7f9d3e48a4f",
            "subnet_id": "subnet-05b7621f021c23a9c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.private-subnet",
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3647df22064da05",
            "route_table_id": "rtb-05d74e7f9d3e48a4f",
            "subnet_id": "subnet-00400244c0983e1cb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:security-group/sg-0774527040e9520b7",
            "description": "Allow traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0774527040e9520b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_test_web",
            "name_prefix": "",
            "owner_id": "330428859659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sorin Security Group",
              "Nginx": "nginx experience 3969501604"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:subnet/subnet-0932cd79ca6217362",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0932cd79ca6217362",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330428859659",
            "tags": {
              "Name": "Management Subnet",
              "Nginx": "nginx experience 3969501604"
            },
            "tags_all": {
              "Name": "Management Subnet",
              "Nginx": "nginx experience 3969501604"
            },
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:subnet/subnet-05b7621f021c23a9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05b7621f021c23a9c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330428859659",
            "tags": {
              "Name": "Web Private Subnet",
              "Nginx": "nginx experience 3969501604",
              "kubernetes.io/cluster/terraform-eks-3969501604": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Web Private Subnet",
              "Nginx": "nginx experience 3969501604",
              "kubernetes.io/cluster/terraform-eks-3969501604": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:subnet/subnet-00400244c0983e1cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00400244c0983e1cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330428859659",
            "tags": {
              "Name": "Web Public Subnet",
              "Nginx": "nginx experience 3969501604",
              "kubernetes.io/cluster/terraform-eks-3969501604": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Web Public Subnet",
              "Nginx": "nginx experience 3969501604",
              "kubernetes.io/cluster/terraform-eks-3969501604": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ee40b22ae771d5f2"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.random-string"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:330428859659:vpc/vpc-0ee40b22ae771d5f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0550f8cc512003244",
            "default_route_table_id": "rtb-0ce6b139f8e6c6b47",
            "default_security_group_id": "sg-0f56c1c5ae62e349f",
            "dhcp_options_id": "dopt-08eca73315fb8b5e0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee40b22ae771d5f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce6b139f8e6c6b47",
            "owner_id": "330428859659",
            "tags": {
              "Name": "vpc nginx experience",
              "Nginx": "nginx experience 3969501604"
            },
            "tags_all": {
              "Name": "vpc nginx experience",
              "Nginx": "nginx experience 3969501604"
            }
          },
          "dependencies": [
            "random_id.random-string"
          ]
        }
      ]
    }
  ]
}